tests/requests/snapshots/auth/when_passwords_do_not_match_registration_fails@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 53
expression: "(response.status_code(), response.text())"
---
(
    422,
    "{\"error\":\"{\\\"confirm_password\\\":\\\"Passwords do not match\\\"}\"}",
)
