tests/requests/snapshots/auth/when_user_does_not_exist_forgot_password_fails@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 149
expression: "(response.status_code(), response.text())"
---
(
    404,
    "{\"error\":\"Entity not found\",\"code\":\"entity_not_found\"}",
)
