tests/requests/snapshots/auth/when_username_contains_non_alphanumeric_chars_registration_fails@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    422,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"username\":\"Only letters, numbers and underscores can be used.\"}}",
)
